k8s/prometheus-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.group01.web.dops.tech`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
  tls:
    certResolver: myresolver
